# decision-making-website

./: .gitattributes  .gitignore  .nojekyll  README.md  about_me.html  background.html  business_context.html  index.html  lab_02.html  philosophy.html  references.html  roadmap.html  roadmap_bayes.html  roadmap_prob.html  robots.txt  sci_process.html  search.json  sitemap.xml  styles.css
01_fundamentals/: 0_study_guide.html  1_applications.html  2_performance_strategy.html  4_ml_stats.html  adoreme.html  ai_ml_cybernetics.html  background.html  bolt.html  lab_01.html  learning.html  prerequisites.html  prob_study_guide.html  roadmap.html  slides.html  stat_foundations.html
02_causality/: ab_testing.html  background.html  lab.html  power.html  roadmap.html  roadmap_abtest.html
03_ml/: datasets.html  roadmap.html  what_is_learning.html
04_engineering/: happy_clients.html  roadmap.html
05_archive/: winter_2022.html
appendix/: open_datasets.html
course_book/: CNAME  _quarto.yml  about_me.qmd  background.qmd  bibliography.yml  business_context.qmd  index.qmd  lab_02.qmd  philosophy.qmd  references.qmd  roadmap.qmd  roadmap_bayes.qmd  roadmap_prob.qmd  sci_process.qmd  styles.css
mlr3_tutorial/: analiza_corespondentelor.Rmd  chess_ratings.ipynb  dimensionality_reduction.Rmd  knn.Rmd  knn.html  logistic_regression.R  mlr3_pipelines.Rmd  mlr3_pipelines.html  schools.Rmd
python_labs/01_setup/: pyproject.toml  readme.md
python_labs/01_setup/notebooks/: chess_ratings.ipynb  chess_ratings_broken.ipynb
sim/: 1L_bday_problem.html  1_intro.html  2L_safari.html  (+3 more)
(+63 files in other folders)
