[tool.poetry]
name = "chess"
version = "0.1.0"
description = "A simple library to get FIDE elo ratings"
authors = ["Mihai Bizovi <bizovim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
